final touches and fixes
