# server/dataccess/Context/MyDbContext.cs
@@ -1,6 +1,5 @@
 using dataccess.Entities;
 using DefaultNamespace;
-using domain;
 using Microsoft.EntityFrameworkCore;
 
 namespace dataccess;
@@ -247,6 +246,9 @@ public partial class MyDbContext : DbContext
 
             entity.Property(e => e.DeletedAt)
                 .HasColumnName("deleted_at");
+
+            entity.Property(e => e.BetSeriesId)
+                .HasColumnName("bet_series_id");
 
             entity.HasIndex(e => e.DeletedAt)
                 .HasFilter("\"deleted_at\" IS NULL")
